change the message on web site
Former-commit-id: d4d1b4a6d71f849c00da577936d5a1617a65ebd5 [formerly 1254f63507fda5cde3eaedf1b1934f7ab4b024b1] [formerly 8e9ed2e0dc6bbfd68844def33ca0d42ab06d2114 [formerly a958e6764a6c0090c875c464f69d7d5d6b9256b6]]
Former-commit-id: b3b8fe666efa883b1719993c03dbea7e50ec113f [formerly 95103a165965c5f6d617bfc9e7631718fdc22587]
Former-commit-id: 8d62354103147f5651b93a1abaad64ce13559590

--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <meta content="Now, your customers are talking about topics related to your business on social media. We provide you the right tool to discover them." name="description">
-    <meta content="ioGrow - Get new customers, Be organized and Grow your Business" property="og:title">
+    <meta content="ioGrow - Get customers from Social Media, and Organize your Sales Process" property="og:title">
     <meta content="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" property="og:image">
     <meta content="Collect Leads from Twitter, LinkedIn and Gmail" property="og:description">
     <title>
-      ioGrow - Get new customers, Be organized and Grow your Business
+      ioGrow - Get customers from Social Media, and Organize your Sales Process
     </title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic" rel="stylesheet">
     <link href="/static/new_web_site/google_drive_files/site.min.css" rel="stylesheet">
@@ -124,7 +124,7 @@ if (window.location.host != "localhost")
         <div class="one-whole">
           <img alt="Drive logo logo-heading" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
           <h1 class="section-headline section-headline-large section-headline-white heading together">
-           Find new customers, Grow faster, together...
+           Get Customers from Social Media, and Organize your Sales Process
 
           </h1>
 
