--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -442,7 +442,7 @@
               </div>
               <div class="clearfix"></div>
             </div><!--/inner-cards-container-->
-            <div ng-show="isFiltering && !leads"  class="col-md-12 " ng-show="blankStateaccount">
+            <div ng-show="isFiltering * !leads"  class="col-md-12 " ng-show="blankStateaccount">
                 <div  data-span="3" class="dashboard-stat cards" data-tablet="span6" data-desktop="span12">
                   <div class="">
                     <div class="blank_slate_arrow"></div>
