finishing design of send email on all pages
Former-commit-id: 8792d95d81557c05ca9284fab4581c16eaece165 [formerly 65a11dfe78204e68346be835a3e08ceb1742c4b9] [formerly e641032d57670e702580d4249eb70e6f07945bf9 [formerly 2a3b077ab71b978122e8d92cbf3c9e7116279be4]]
Former-commit-id: 2cc53211bf93bccb7a75a4c9fc203317aaf40316 [formerly a1c9a5b4b538f7213c8bb8702f379b829662606a]
Former-commit-id: 4a211823b004eadc6656279d5021676e841281f1

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -42,6 +42,14 @@
             </div>
         </div>
     </div>
+      <div class="loader-container row" ng-show="emailSentMessage">
+      <div class="loader-dialog">
+        <div class="loader-content" style="width: 100%; padding-top: 10px; padding-bottom: 10px;">
+          {{_('Your message has been sent.')}}
+        </div>
+      </div>
+
+</div>
     <div class="container" ng-show="immediateFailed">
         <div class="col-md-12">
 
@@ -2893,8 +2901,11 @@
                           <div class="modal-dialog">
                             <div class="modal-content">
                               <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                <button type="button"  ng-click="closeEmailModel()" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                 <a href="" class="pull-right" ng-click="switchEmailModal()" style="margin-right: 8px;margin-top: -2px; cursor:pointer;">
+                                    <i class="fa" ng-class="{true:'fa-resize-small', false:'fa-resize-full'}[smallModal]" style="color: white;font-size: 11px;"></i>
+                                 </a>
+                                <h4 class="modal-title" id="myModalLabel">New Message</h4>
                               </div>
                               <div class="modal-body">
                                  <form  class="ng-pristine ng-invalid ng-invalid-required">
@@ -2917,7 +2928,7 @@
 
                                     <div class="form-group" ng-show="showCC">
                                         <input
-                                            class="form-control ng-pristine ng-valid"
+                                            class="form-control"
                                             autofocus=""
                                             type="text"
                                             placeholder="{{_('CC')}}"
@@ -2927,7 +2938,7 @@
                                     </div>
                                     <div class="form-group" ng-show="showBCC">
                                         <input
-                                            class="form-control ng-pristine ng-valid"
+                                            class="form-control"
                                             autofocus=""
                                             type="text"
 
@@ -2938,22 +2949,26 @@
                                     <div class="form-group">
                                         <input
                                             required=""
-                                            class="form-control ng-pristine ng-invalid ng-invalid-required"
+                                            class="form-control"
                                             autofocus=""
                                             type="text"
-                                            placeholder="{{_('Add a subject')}}"
+                                            placeholder="{{_('Subject')}}"
                                             id="messageSubject"
                                             ng-model="email.subject">
                                     </div>
-                                    <div class="form-group">
-                                        <textarea id="some-textarea" placeholder="{{_('Enter text ...')}}" id="noteBody" class="form-control ng-pristine ng-valid" rows="7" ng-model="email.body"></textarea>
+                                    <div class="form-group text-form-group">
+                                        <textarea id="some-textarea" placeholder="{{_('Enter text ...')}}" id="noteBody" class="form-control" rows="7" ng-model="email.body"></textarea>
                                     </div>
                                 </form>
                               </div>
                               <div class="modal-footer">
-                                <input ng-click="sendEmail(email)" ng-disabled="isLoading || !email.to" type="submit" id="btnSendMail" class="btn green" value="{{_('Send')}}">
+                                <input ng-click="sendEmail(email)" ng-disabled="isLoading || !email.to" type="submit" id="btnSendMail" class="btn blue" value="{{_('Send')}}">
                                 <div class="form-group attachfile-form-group">
-                                  <a href="#" data-toggle="modal" ng-click="showAttachFilesPicker()"><i class="fa  fa-paperclip"></i> {{_('Attach files')}}</a>
+                                  <a href="#" data-toggle="modal" ng-click="switchwysihtml()"><i class="fa  fa-font" style="font-size: 23px;"></i></a>
+                                </div>
+                                <div class="form-group attachfile-form-group" style="height: 31px;border-left: 1px solid rgb(229, 229, 229); margin-top: 2px;"></div>
+                                <div class="form-group attachfile-form-group">
+                                  <a href="#" data-toggle="modal" ng-click="showAttachFilesPicker()"><i class="fa  fa-paperclip"></i></a>
                                   <ul class="list-unstyled">
                                       <li ng-repeat="file in sendWithAttachments">
                                           <%= file.title %>
@@ -2970,6 +2985,12 @@
                                     placeholder: "{{_('Click to Select a label')}}",
                                     allowClear: false
                                 });
+                                 /*$("#wysihtmlButton").popover({
+                                    html : true, 
+                                    content: function() {
+                                      return $('.wysihtml5-toolbar').html();
+                                    }
+                                });*/
                                 $(function() {
                                     $('#datetimepicker2').datetimepicker({
                                         language: 'fr',
