--- a/templates/search/list.html
+++ b/templates/search/list.html
@@ -158,7 +158,7 @@
                                  </div>
                                  <div class="clearfix"></div>
                               </li>-->
-                              <li class="linkedinListItem"   ng-repeat="profile in profiles">
+                              <li class="linkedinListItem"   ng-repeat="profile in profiles|orderBy:'-_score'">
                                   <div class="pic" >
                                      <img ng-show="profile._source.img!=''" src="<%=profile._source.img%>">
                                      <img ng-show="profile._source.img==''" src="/static/img/avatar_contact.jpg">
