--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -815,6 +815,8 @@
   </div>
   </div>
 </div>
+
+
 <div id="BeforedeleteSelectedLeads" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" 
               aria-hidden="true">
           <div class="modal-dialog">
@@ -972,6 +974,26 @@
                             </div>
                           </div>
                         </div>
+
+<div id="installChromeExtension" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+              <h3 id="myModalLabel" class="modal-title">{{_('Collect Leads from LinkedIn and Gmail')}} </h3>
+            </div>
+            <div class="modal-body">
+                <iframe width="100%" height="360" src="https://www.youtube.com/embed/o2BUixBI4Ms" frameborder="0" allowfullscreen></iframe>
+            </div>
+              <div class="modal-footer">
+                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+                <a href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni" target="_blank" class="btn green"> Install Chrome Extension
+                </a>
+              </div>
+          </form>
+        </div>
+      </div>
+  </div>
 <script type="text/javascript">
   $("#select2_sample2").select2({
         placeholder: "{{ _('Click to Select a label')}}",
