--- a/templates/base.html
+++ b/templates/base.html
@@ -500,6 +500,8 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
          © i/oGrow  2013 - 2014
   </div>
 <input type="hidden" id="userEmail" value="{{user.email}}">
+<input type="hidden" id="userId" value="{{user.id}}">
+<input type="hidden" id="completedTour" value="{{user.completed_tour}}">
 </div>
 <div class="clearfix"></div>
 <!-- END FOOTER -->
