--- a/templates/base.html
+++ b/templates/base.html
@@ -648,6 +648,7 @@ window.Intercom('boot', {
   // TODO: The current logged in user's email address.
   email: "{{user.email}}",
   topics: '{{topics}}',
+  completed_tour: '{{user.completed_tour}}',
   // TODO: The current logged in user's sign-up date as a Unix timestamp.
   created_at: created_at.getTime()/1000
 });
