--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -994,7 +994,7 @@
             </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <a href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni" target="_blank" class="btn green"> Install Chrome Extension
+                <a ng-click="saveIntercomEvent('visiting chrome store')" href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni" target="_blank" class="btn green"> Install Chrome Extension
                 </a>
               </div>
           </form>
