addd tweet replay in lead
Former-commit-id: 57d159bb2048836ac06c944cb22b7084e57be638 [formerly 4a065d1fec422cdaecb96a781abd565c6536cfdb] [formerly 543c9c4e89f9750957677c393285819c964c406e [formerly 0a0d039a7c32731f8ddc37569a314b5eea21da37]]
Former-commit-id: 5a2586c2155895d9e6321d6397f9f74082dfb9bd [formerly 37ef1495c7f3727173f4a62627aecb32fc4b052c]
Former-commit-id: eb2780a08032a80b85077a53b4da8c0088474ff3

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -91,9 +91,14 @@
                                            <a href="/#/search/type:Lead <%=lead.status%>" class="tag">
                                             #<%= lead.status %></a>
                                          </li>
-                                         <li>                                            
+                                         <li>  
+
                                              <div id="placeholder-div1" class="pull-right hangout-btn"></div> 
                                               <div class="pull-right sharebuttonDiv">
+                                                <a ng-show="screen_name" href="https://twitter.com/intent/tweet?screen_name=<%=screen_name%>" class="twitter-mention-button">Tweet to <%=screen_name%></a>
+                                                <script>
+                                                !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+                                                </script>
                                                  <a ng-click="showConvertModal()" title="Convert" class="btn blue btn-sm jfk-button jfk-button-action" data-toggle="modal">
                                                         <i class="icon-refresh"></i>
                                                          <span class="text"> {{_("Convert")}}</span>
