working on language
Former-commit-id: f8b8e505b48702ad60573dc6a1e574a5a3c1e5c9 [formerly 926b4effc8c371e772bc7b2c7f514ba770ec9f53] [formerly d8860785f4fdf2865ba715bf439e9e8d12090816 [formerly 4a589608bc7aabf145e89d1b6d840d8a74408383]]
Former-commit-id: 0038e5b737eeb5277fc17e343e89b5fd23a1fdef [formerly 54d0b96146434206ff4e2a089ab250fe8b1ac00d]
Former-commit-id: 3fd6219fbc5c78b142e5d36639109c0ed9d4f11a

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -442,8 +442,8 @@
       <div class="portlet-body">
         <div class="row">
           <div class="col-md-12">
-              <select  class="form-control" ng-change="changeLanguage()" ng-model="discovery_language">
-                  <option value="all">Default</option>
+              <select  class="form-control" ng-change="changeLanguage(discovery_language)" ng-model="discovery_language">
+                  <option value="all">All</option>
                   <option value="en">English</option>
                   <option value="ar">Arabic</option>
                   <option value="da">Danish</option>
