Activate Payement with strip , fix #1672
Former-commit-id: 8221beb7f997c6d24a50db9f06d9ad9b1866b8be [formerly 9206207e85015cae2e9a8d36c789c57d837ee580] [formerly 14b7701b5a34e454cec70ea139a2a74b92bdf117 [formerly baabf6002eaf1d9788a94e46713adacc4ef476f0]]
Former-commit-id: 7acf4c286bfeb8b4b9912af8b6cceda0e7d928c8 [formerly 63a0999ff4bdd4b41288bdbb120a0d9c37c0abb2]
Former-commit-id: 4158f770a6940e0bb1d0f934a999d20a2d90eaed

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
 <script type="text/javascript">
   // This identifies your website in the createToken call below
   // this is live mode
-   Stripe.setPublishableKey('pk_live_6Mj1A3QyWeLlvcN6FEeP0HXa'); 
+   Stripe.setPublishableKey('pk_live_4Xa3cFwLO3vTgdjpjnC6gmAD'); 
   //*************************************************************************  
   // this is test mode 
  // Stripe.setPublishableKey('pk_test_4Xa35zhZDqvXz1OzGRWaW4mX');
@@ -530,14 +530,14 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 
 
-// var ROOT = '/_ah/api';
+ var ROOT = '/_ah/api';
 
 
 
 
 
 
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
