--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,6 @@
   <link href="/static/bootstrap3/css/test.css" rel="stylesheet" type="text/css"/>
 
 
-
   <!-- END THEME STYLES -->
 
   <!-- **********************the stripe code******************************* -->
@@ -738,7 +737,7 @@ window.Intercom('boot', {
 
 </script>
 
-<script src="https://checkout.stripe.com/checkout.js"></script>
+<!-- <script src="https://checkout.stripe.com/checkout.js"></script> -->
 
 
 
