hide lead by source on lead list
Former-commit-id: e0e563f8fcfb495862b455260946af84516aadce [formerly e27748e340b46ff1fc7cf525d542f80df5755563] [formerly 23e9e6f17a3973930fa8510886eb397804c4856e [formerly 443705c03d91d79a87a37dc2c6cb4732a92b1c32]]
Former-commit-id: 28e745f82fa7f58e65c900c1e9051d1353e7bb96 [formerly 65558eb06102639cb9a212344ea2dd44556da10c]
Former-commit-id: 99b823067cfd179a25dbd9de5e5d2b93fd404472

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -751,11 +751,11 @@
       </div> -->
     </div>
   </div>
-      <div class="col-md-12">
+      <!--div class="col-md-12">
     <div class="portlet showCard">
       <div class="portlet-title">
         <div class="caption">
-                <!-- class="fa fa-reorder"--><i></i>{{_("Leads by source")}}
+               <i></i>{{_("Leads by source")}}
         </div>  
       </div>
       <div class="portlet-body">
@@ -772,7 +772,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div-->
   </div>
 </div>
 
