working on default keyword in discovery
Former-commit-id: c65cc79dff36e21d6ad60d1e946217c9530fd98a [formerly de789c0bd21b1d053ad4cb0b5d32104331e3156e] [formerly eef947416e6e9ae5c82175357e0fa41295a69338 [formerly dfaa5cf316cdcd1276c204a68c7b1fb48d68b844]]
Former-commit-id: c709574a4345694d999b7d3f1f2bac527b6db65c [formerly bb5370c079739ce71ad135a907ea873982225a1f]
Former-commit-id: 679a2f599822b465355d9b950c1f3fe15b8f4b0c

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -694,7 +694,7 @@
 //   }
 // };
 // });
-$("[name='my-checkbox']").bootstrapSwitch();
+//$("[name='my-checkbox']").bootstrapSwitch();
  $('#slimtest1').slimScroll({
                     height: '20px'
   });
