--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
   <!-- web fonts -->
 
-     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab|Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic&subset=latin|Exo+2:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&subset=latin|Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
+     <link href='http://fonts.googleapis.com/css?family=Ubuntu|Roboto|Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
   <!-- end of web fonts--> 
 
 
@@ -33,10 +33,7 @@
   <link  rel="shortcut icon" href="/favicon.ico" />
 
   <!-- BEGIN PAGE LEVEL PLUGIN STYLES -->
-  <link rel="stylesheet" href="/static/css/bootstrap-wysihtml5.css">
-
-
-
+  <link rel="stylesheet" href="/static/plugins/bootstrap-wysihtml5/wysiwyg-color.css">
   <link href="/static/bootstrap3/plugins/select2/select2_metro.css" rel="stylesheet" type="text/css"/>
   <!-- END PAGE LEVEL PLUGIN STYLES -->
   <!-- BEGIN THEME STYLES -->
@@ -52,7 +49,7 @@
   <link href="/static/plugins/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
   <link href='/static/plugins/fullcalendar/fullcalendar.print.css' rel='stylesheet' media='print' />
 
-  <!-- test -->
+  <!-- test 
   <link rel="stylesheet" type="text/css" href="http://cdn-na.infragistics.com/igniteui/2014.1/latest/css/themes/infragistics/infragistics.theme.css">
   <link rel="stylesheet" type="text/css" href="http://cdn-na.infragistics.com/igniteui/2014.1/latest/css/structure/infragistics.css">
   <link href="/static/bootstrap3/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />
@@ -466,25 +463,26 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 <!-- END FOOTER -->
 <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
 <!-- BEGIN CORE PLUGINS -->
- <script src="/static/hopscotch/js/hopscotch.js" async></script>
+<script src="/static/hopscotch/js/hopscotch.js" async></script>
 <script src="/static/hopscotch/js/tour.js" async></script>
 
-  <script src="/static/plugins/jquery.min.js"  type="text/javascript"></script>
-  <script src="/static/bootstrap3/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
-  <script src="/static/bootstrap3/plugins/moment/moment.min.js"></script>
-  <script src="/static/app/scripts/vendor/angular.js" ></script>
-  <script src="/static/app/scripts/vendor/socket.io/socket.io.js" ></script>
+<script src="/static/plugins/jquery.min.js"  type="text/javascript"></script>
+<script src="/static/bootstrap3/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
 
-  <script src="/static/plugins/ng-google-chart.js" ></script>
-  <script src="/static/plugins/d3.min.js" ></script>
-  <script src="/static/plugins/d3-funnel-charts.js" ></script>
+<script src="/static/bootstrap3/plugins/moment/moment.min.js"></script>
+<script src="/static/app/scripts/vendor/angular.js" ></script>
+<script src="/static/app/scripts/vendor/socket.io/socket.io.js" ></script>
+
+<script src="/static/plugins/ng-google-chart.js" async  ></script>
+<script src="/static/plugins/d3.min.js" async ></script>
+<script src="/static/plugins/d3-funnel-charts.js"async ></script>
     <!-- test -->
-      <script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.core.js" async></script>
-      <script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.dv.js" async></script>
-      <script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.lob.js" async></script>
+<script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.core.js" async></script>
+<script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.dv.js" async></script>
+<script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.lob.js" async></script>
       <!-- test -->
 
-  <script type="text/javascript">
+<script type="text/javascript">
 
 
 
@@ -590,34 +588,34 @@ window.Intercom('boot', {
  </script>
 
  <script src="http://storage.googleapis.com/iogrow-cdn/static_scripts.js" ></script>
- <script src="/static/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
- <script src="/static/plugins/fullcalendar/lang-all.js" type="text/javascript"></script>
- <script src="/static/plugins/fullcalendar/gcal.js" type="text/javascript"></script>
- <script src="/static/plugins/date-time-picker/jquery.simple-dtpicker.js"></script>
+ <script src="/static/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript" async></script>
+ <script src="/static/plugins/fullcalendar/lang-all.js" type="text/javascript" async></script>
+ <script src="/static/plugins/fullcalendar/gcal.js" type="text/javascript" async></script>
+ <script src="/static/plugins/date-time-picker/jquery.simple-dtpicker.js" async></script>
  <!-- <script type="text/javascript" src="/static/plugins/caret/jquery.caret.js"></script>-->
- <script src="/static/bootstrap3/plugins/bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
- <script src="/static/bootstrap3/plugins/uniform/jquery.uniform.js" type="text/javascript"></script>
+ <script src="/static/bootstrap3/plugins/bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.min.js" type="text/javascript" async></script>
+ <script src="/static/bootstrap3/plugins/uniform/jquery.uniform.js" type="text/javascript" async></script>
   <!-- ioGrow Services -->
   <script src="/static/app/scripts/services/authservices.js"></script>
   <script src="/static/app/scripts/services/infonodeservices.js"></script>
-  <script src="/static/app/scripts/services/mapservices.js"></script>
+  <script src="/static/app/scripts/services/mapservices.js" async></script>
   <script src="/static/app/scripts/services/accountservices.js"></script>
   <script src="/static/app/scripts/services/contactservices.js"></script>
   <script src="/static/app/scripts/services/opportunityservices.js"></script>
   <script src="/static/app/scripts/services/leadservices.js" ></script>
-  <script src="/static/app/scripts/services/caseservices.js" ></script>
-  <script src="/static/app/scripts/services/discoverservices.js"></script>
-  <script src="/static/app/scripts/services/topicservices.js" ></script>
+  <script src="/static/app/scripts/services/caseservices.js" async></script>
+  <script src="/static/app/scripts/services/discoverservices.js" async></script>
+  <script src="/static/app/scripts/services/topicservices.js" async></script>
   <script src="/static/app/scripts/services/taskservices.js" ></script>
-  <script src="/static/app/scripts/services/eventservices.js" ></script>
+  <script src="/static/app/scripts/services/eventservices.js" async></script>
   <script src="/static/app/scripts/services/userservices.js"></script>
-  <script src="/static/app/scripts/services/groupservices.js"></script>
-  <script src="/static/app/scripts/services/noteservices.js" ></script>
-  <script src="/static/app/scripts/services/commentservices.js" ></script>
+  <script src="/static/app/scripts/services/groupservices.js" async></script>
+  <script src="/static/app/scripts/services/noteservices.js" async></script>
+  <script src="/static/app/scripts/services/commentservices.js" async></script>
   <script src="/static/app/scripts/services/settingservices.js" ></script>
-  <script src="/static/app/scripts/services/importservices.js" ></script>
+  <script src="/static/app/scripts/services/importservices.js" async></script>
   <script src="/static/app/scripts/services/edgeservices.js" ></script>
-  <script src="/static/app/scripts/services/reportservices.js" ></script>
+  <script src="/static/app/scripts/services/reportservices.js" async></script>
   <script src="/static/app/scripts/services/profileservices.js" ></script>
   <script src="/static/app/scripts/services/linkedinservices.js" ></script>
 
@@ -627,26 +625,26 @@ window.Intercom('boot', {
   <script src="/static/app/scripts/directives/directives.js" ></script>
   <!-- /End of ioGrow helpers and directives -->
   <!-- ioGrow Controllers -->
-  <script src="/static/app/scripts/controllers/discovercontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/discovercontrollers.js" async></script>
    <script src="/static/app/scripts/controllers/mysettingcontrollers.js" ></script>
    <script src="/static/app/scripts/controllers/searchcontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/accountcontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/leadcontrollers.js" ></script>
-  <script src="/static/app/scripts/controllers/casecontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/casecontrollers.js" async></script>
   <script src="/static/app/scripts/controllers/billingController.js" ></script>
   <script src="/static/app/scripts/controllers/contactcontroller.js"></script>
   <script src="/static/app/scripts/controllers/opportunitycontroller.js" ></script>
-  <script src="/static/app/scripts/controllers/documentcontrollers.js"></script>
-  <script src="/static/app/scripts/controllers/notecontrollers.js"></script>
+  <script src="/static/app/scripts/controllers/documentcontrollers.js" async></script>
+  <script src="/static/app/scripts/controllers/notecontrollers.js" async></script>
   <script src="/static/app/scripts/controllers/taskcontrollers.js"></script>
-  <script src="/static/app/scripts/controllers/eventcontrollers.js"></script>
-  <script src="/static/app/scripts/controllers/dashboardController.js" ></script>
+  <script src="/static/app/scripts/controllers/eventcontrollers.js" async></script>
+  <script src="/static/app/scripts/controllers/dashboardController.js" async></script>
 
   <!--Admin controllers-->
   <script src="/static/app/scripts/controllers/usercontrollers.js" ></script>
-  <script src="/static/app/scripts/controllers/groupcontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/groupcontrollers.js" async></script>
   <script src="/static/app/scripts/controllers/settingscontrollers.js" ></script>
-  <script src="/static/app/scripts/controllers/importcontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/importcontrollers.js" async></script>
 
 
   <!-- /End of ioGrow controllers -->
