notify mark as lead in linked search
Former-commit-id: 34c32dd5584f3ede9f0d3c9d5b40d0b0b26ca94d [formerly daecaf3e4a2f137cd7ae841b2db023258a7b5d7b] [formerly 04d1da3e5885b4cc1c2ad830ff9a2b1b9226bde3 [formerly 3e2eabf7256436cac464df1447a644d32c0d8090]]
Former-commit-id: e67b3d5ea4a5b6b89107e6f8e7935108308780a3 [formerly c4adb515ba7bd4f3e778842f091a621296797dde]
Former-commit-id: 3af0d261c1a23f56d1e6005a34147a17c3d4dee3

--- a/templates/search/list.html
+++ b/templates/search/list.html
@@ -30,6 +30,13 @@
       </div>
       
     </div>
+  <div class="loader-container row" ng-show="markedAsLead">
+    <div class="loader-dialog col-md-4 col-md-offset-4 ">
+      <div class="loader-content">
+          {{ _('Added to leads...')}}
+      </div>
+    </div>
+  </div>
     
 
    <!-- BEGIN SAMPLE PORTLET CONFIGURATION MODAL FORM-->
