Add button Edit on amount opportunity show ,fix #1686
Former-commit-id: d498372bbc4183d945b490b90942cd24659b5cfd [formerly ef1b510dc17922da946076ed3491527721e022ca] [formerly 59d57161b15de26440f09bfc96e67f551e24b0f1 [formerly be7186f6b3eb865363d12887593bd8cc3bab6222]]
Former-commit-id: d5d9c06fe1c0069c10e781f110b67e8af99f8c09 [formerly d400579741c0e14fc1aea83607b2d620afb9f3ea]
Former-commit-id: 3ffe5fef3a87f205c76c1121bb0ff0cbd2458c73

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -218,6 +218,8 @@
                   <div class="row">
                     <div class="col-md-6">
                       <div class="news-blocks blank-card blank-card-yellow newsCard">
+                        <a ng-click="showPriceForm=true" ng-hide="showPriceForm" class="btn-link pull-right addAnotherPhone" data-toggle="modal"><i class="fa fa-pencil"></i> Edit </a> 
+
                         <h3>{{ _('Opportunity Details')}}</h3>
                         <div class="stage-chart-block">
                           <div class="col-md-5">
