--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -88,7 +88,7 @@
                     </button>
                     <ul class="dropdown-menu" role="menu">
                       <li>
-                        <p class="indication-item">{{ _('Use')}} <span>#</span> {{ _('to add labels')}}</p>
+                        <p class="indication-item">{{ _('Use')}} <span>#</span> {{ _('to add Tags')}}</p>
                       </li>
                       <li>
                         <p class="indication-item">{{ _('Use')}}<span>@</span> {{ _('to assign the task')}}</p>
@@ -1372,7 +1372,7 @@
                          <div class="row">
                            <div class="col-md-12 form-group">
 
-                             <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('New Topic')}}">
+                             <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('Add Tag')}}">
 
                            </div>
                          </div>
