--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -409,7 +409,7 @@
             <div class="row">
               <div class="col-md-9 form-group">
 
-                <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('New Topic')}}">
+                <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('Add Topic')}}">
 
               </div>
               <div class="col-md-3">
