--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -633,7 +633,7 @@
     <div class="portlet showCard">
       <div class="portlet-title">
         <div class="caption">
-                <!-- class="fa fa-reorder"--><i></i>{{_("Labels")}}
+                <!-- class="fa fa-reorder"--><i></i>{{_("Tags")}}
         </div>  
       </div>
     <div class="portlet-body">
@@ -676,7 +676,7 @@
           <div class="row">
             <div class="col-md-12 form-group">
 
-              <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('New Topic')}}">
+              <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('Add Tag')}}">
 
             </div>
           </div>
