--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -413,7 +413,7 @@
         <div class="portlet showCard">
           <div class="portlet-title">
             <div class="caption">
-                    <!-- class="fa fa-reorder"--><i></i>{{_('Labels')}}
+                    <!-- class="fa fa-reorder"--><i></i>{{_('Tags')}}
             </div>
           </div>
                     <div class="portlet-body">
@@ -456,7 +456,7 @@
           <div class="row">
             <div class="col-md-12 form-group">
 
-              <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('New Topic')}}">
+              <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('Add Tag')}}">
 
             </div>
           </div>
