replace labels by tags on contact list
Former-commit-id: d1d4609961cf76661f25f4d96b691ce465304715 [formerly cba538e2e75d7b72c0346d197f1f6961176a2512] [formerly 162a719a67585dd89756d29c8c4b9a35aed480a3 [formerly c52f5aab7f8afdf2a1b8b742187d4eb6123b9bc6]]
Former-commit-id: a82ff368e5a75f61a5fdbaa5e0d8344473c39053 [formerly 07fee410ee4a389132a6304621f4d7c4f6ee3af1]
Former-commit-id: 8fec888dce89d98bd9c9a122b50382c42314c61e

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -475,7 +475,7 @@
         <div class="portlet showCard">
           <div class="portlet-title">
             <div class="caption">
-                    <!-- class="fa fa-reorder"--><i></i>{{ _('Labels')}}
+                    <!-- class="fa fa-reorder"--><i></i>{{ _('Tags')}}
             </div>
           </div>
           <div class="portlet-body">
