--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -21,16 +21,16 @@
       <div class="col-md-10 col-xs-12 filter-content">
       <div class="filterOptions">
 
-          <span role="button" class="filterItem" ng-click="back_to_tweets();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _('Tweets')}} 
+          <span role="button" class="filterItem fa fa-twitter " ng-click="back_to_tweets();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _(' Tweets')}} 
            </span>
-           <span role="button" class="filterItem"  ng-click="influencers_V2();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _('Influencers')}}</span>
+           <span role="button" class="filterItem fa fa-group "  ng-click="influencers_V2();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _(' Influencers')}}</span>
           
-
+<span role="button" class="filterItem fa fa-map-marker " ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _(' Map')}}</span>
 
           <!--span role="button" class="filterItem"  ng-click="influencers_V2();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _('Influencers')}}</span>
 
           
-          <!-- <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _('On')}}<span class="hidden-xs hiddenOnxs">{{ _('Maps')}}</span> </span -->
+          <!--  -->
           
           
        <!--      <div class="btn-group visibleOnPhone">
@@ -118,10 +118,94 @@
     <div class="row ">
 
 
-    <div ng-show="mapshow" style="height:600px; width:1000px; margin-left:5px;" id="map-canvas"/>
+    <div ng-show="mapshow" style="height:300px; width:1200px; margin-left:5px; margin-top:0px;" id="map-canvas"/>
+
+<div class="col-md-12 waterfall" ng-hide="blankStatelead">
+    <div style="margin-top:10px;"  droppable ng-repeat="tweet_map in map_tweets" ng-show="mapshow" id="card_<%=$index%>"class="cardElement tweetCard" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false" style="z-index:109;overflow: visible;">
+       
+          
+
+
+                 <div class="detailsSection">
+             <div class="head">
+             
+              <div class="pic">
+                      <a href="/#/discovers/show/<%= tweet_map.idp %>*" ng-click="details_of_tweets(tweet_map.idp)"   target="new" class="startup-link" title="account.name">
+                
+                          <img href="/#/discovers/show/<%= tweet_map.idp %>*" ng-show="tweet_map._source.user.profile_image_url" ng-click="details_of_tweets(tweet_map.id)" target="new" class="img-responsive profile-photo" src="<%=tweet_map._source.user.profile_image_url %>">
+                      </a>
+              </div>
+              <div class="text">
+               <!-- <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>-->
+                <div class="name">
+
+                   <a href="/#/discovers/show/<%= tweet_map._source.id %>*" target="new" class="profile-link">
+                      <%= tweet_map._source.user.name %>
+                   </a>
+                  
+                <span  class="contact-title followers_nb" >
+                  <%=tweet_map._source.user.followers_count%> followers
+                </span>
+        
+                </div>
+                
+              </div>
+          </div> 
+          <div class="textbody">
+              <div class="pitch">
+                <a href="/#/discovers/show/<%= tweet_map._source.id %>" target="new"  >
+                <p  class="contact-title"> <%=tweet_map._source.user.description%>
+                </p>
+              </a>
+              </div>
+           <!--    <div class="pitch">
+                <span  class="contact-title" >
+                  <%=fromNow(tweet._source.created_at)%>
+                </span>
+              </div> -->
+         
+              <div class="clearfix"></div>
+          </div>
+          </div>
+          <div class="actions-section">
+             
+              <div class="iogrow-actions pull-left">
+                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(tweet_map._source)"><i class="fa fa-road "></i> Mark as lead</a>
+              </div>
+              <div class="clearfix"></div>
+            </div>
+          <div class="tagsSection" ng-class="{hidden: lead.tags==null}">
+            <div class="sectionContent">
+              <a ng-repeat="tag in lead.tags" href="/#/search/type:Lead tags:<%=tag.id%>"> <span draggable  ng-drag="dragTagItem(tag.edgeKey)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
+              </a>
+            </div>
+          </div>
+
+
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     
 
-      <div class="col-md-12 waterfall" ng-hide="blankStatelead">
+      
         <!--div class="labelsCardElement cardElement" data-span="all" ng-show="showTagsFilter">
               <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
               <ul class="list-group tags-list">
@@ -368,12 +452,12 @@
     <div class="portlet showCard" style="padding: 15px;">
       <div class="portlet-title">
         <div class="caption">
-                <!-- class="fa fa-reorder"--><i></i>{{_("Filter by Topics")}}
+                <!-- class="fa fa-reorder"--><i></i>{{_("Filter by Topics: ")}}
         </div>  
       </div>
       <div class="portlet-body">
         <div class="row">
-
+           
             <ul id="slimList" class="list-group tags-list relatedTags discoveryTags">
 
               <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  ng-class="{selectedTopic: isSelected(tag_item)}">
@@ -444,7 +528,7 @@
     </div>
   </div>
   <div class="clearfix"></div>
-    <div class="col-md-12">
+    <div ng-show="!mapshow" class="col-md-12">
     <div class="portlet showCard" style="padding: 15px;">
       <div class="portlet-title">
         <div class="caption">
