--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -120,8 +120,28 @@
 
     <div ng-show="mapshow" style="height:300px; width:1200px; margin-left:5px; margin-top:0px;" id="map-canvas"/>
 
-<div class="col-md-12 waterfall" ng-hide="blankStatelead">
-    <div style="margin-top:10px;"  droppable ng-repeat="tweet_map in map_tweets" ng-show="mapshow" id="card_<%=$index%>"class="cardElement tweetCard" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false" style="z-index:109;overflow: visible;">
+    <div ng-show=" !map_tweets && mapshow" class="thumbnail blank_slate_body ">
+      <img class="col-md-2" src="http://www.brotzer-sport.ch/files/Layout/Bilder/map-icon-1106183457.png"></img>
+                <p class="lead">{{ _('Click on any Location to show related tweets.')}}</p>
+              </div>
+
+<div class="col-md-12 waterfall2"   ng-hide="blankStatelead">
+
+   <!-- <div ng-show=" !map_tweets && mapshow" class="col-md-12" style="margin-top:5px;" >
+          <div  data-span="9" class=" dashboard-stat cards" data-tablet="span6" data-desktop="span12">
+            <div class="col-md-12">
+              <div class="blank_slate_arrow"></div>
+              <div class="thumbnail blank_slate_body fa fa-map-marker">
+                <p class="lead">{{ _('Choose Location to show related tweets.')}}</p>
+              </div>
+            </div>
+          </div>
+          <div class="clearfix"></div>
+        </div> -->
+        <!--/inner-cards-container-->
+
+
+    <div style="margin-top:10px;" ng-show="mapshow" droppable ng-repeat="tweet_map in map_tweets"  id="card_<%=$index%>" class="cardElement tweetCard" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false" style="z-index:109;overflow: visible;">
        
           
 
@@ -187,78 +207,11 @@
 
 
 
+</div>
 
+<div class="col-md-12 waterfall" ng-show="influencersshow" ng-hide="blankStatelead">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-
-      
-        <!--div class="labelsCardElement cardElement" data-span="all" ng-show="showTagsFilter">
-              <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
-              <ul class="list-group tags-list">
-              <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  >
-                <div class="row">
-                  <span  ng-drag="dragTag(tag_item)" draggable class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;">
-                      <%= tag_item.name %>
-                  </span>
-
-                   <input type="checkbox" ng-show="!manage_tags" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()">
-                  <form ng-submit="doneEditTag(tag_item)" ng-show="(tag_item==edited_tag)&&(manage_tags)">
-                    <input ng-blur="doneEditTag(tag_item)" type="text" class="col-md-offset-1 col-md-7 form-control inlineEditTag " ng-model="tag_item.name">
-                  </form>
-                  <button ng-click="deleteTag(tag_item)" class="close_tag close pull-right" ng-show="manage_tags"></button>
-                </div>
-              </li>
-              <li class="list-group-item tags-list-item" ng-hide="showNewTag" ng-click="showNewTagForm()">
-                <a ng-click="" class="btn-link addAnotherPhone">
-
-                  <i class="fa fa-tags"></i>  {{_('Add a new Topic')}}
-
-                </a>
-              </li>
-            </ul>
-            <form class="well newTagForm" role="form" ng-show="showNewTag">
-              <button type="button" class="close"  aria-hidden="true" ng-click="hideNewTagForm()"></button>
-              <div class="row">
-                <div class="col-md-12 form-group">
-                  <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{_('New topic')}}">
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-8">
-                  <ul class="color_pallet_menu">
-                    <li ng-repeat="color in color_pallet" ng-click="checkColor(color)" class="color-<%=color.name%>" ng-class='{colorChecked: color.name==tag.color.name}' >
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-md-4">
-                  <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="Add">
-                </div>
-              </div>
-            </form>
-            <div class="form-group btn-manage-tags" ng-show="tags">
-              <button class="btn btn-default pull-right" ng-click="manage_tags=!manage_tags;manage()">{{_('Manage Topics')}}
-              </button>
-            </div>
-        </div-->
-
-
-
-
-        <div  droppable ng-repeat="tweet in influencers_list" ng-show="influencersshow" id="card_<%=$index%>"class="cardElement tweetCard" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false" style="z-index:109;overflow: visible;">
+        <div  droppable ng-repeat="influencer in influencers_list"  id="card_<%=$index%>"class="cardElement tweetCard" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false" style="z-index:109;overflow: visible;">
        
           
 
@@ -267,21 +220,21 @@
              <div class="head">
              
               <div class="pic">
-                      <a href="/#/discovers/show/<%= tweet.idp %>*" ng-click="details_of_tweets(tweet.idp)"   target="new" class="startup-link" title="account.name">
+                      <a href="/#/discovers/show/<%= influencer.idp %>*" ng-click="details_of_tweets(influencer.idp)"   target="new" class="startup-link" title="account.name">
                 
-                          <img href="/#/discovers/show/<%= tweet.idp %>*" ng-show="tweet._source.user.profile_image_url" ng-click="details_of_tweets(tweet.id)" target="new" class="img-responsive profile-photo" src="<%=tweet._source.user.profile_image_url %>">
+                          <img href="/#/discovers/show/<%= influencer.idp %>*" ng-show="influencer._source.user.profile_image_url" ng-click="details_of_tweets(influencer.id)" target="new" class="img-responsive profile-photo" src="<%=influencer._source.user.profile_image_url %>">
                       </a>
               </div>
               <div class="text">
                <!-- <button type="button" class="close deleteLeadBtn" ng-show="showClose" ng-click="editbeforedelete(lead)"></button>-->
                 <div class="name">
 
-                   <a href="/#/discovers/show/<%= tweet._source.id %>*" target="new" class="profile-link">
-                      <%= tweet._source.user.name %>
+                   <a href="/#/discovers/show/<%= influencer._source.id %>*" target="new" class="profile-link">
+                      <%= influencer._source.user.name %>
                    </a>
                   
                 <span  class="contact-title followers_nb" >
-                  <%=tweet._source.user.followers_count%> followers
+                  <%=influencer._source.user.followers_count%> followers
                 </span>
         
                 </div>
@@ -290,8 +243,8 @@
           </div> 
           <div class="textbody">
               <div class="pitch">
-                <a href="/#/discovers/show/<%= tweet._source.id %>" target="new"  >
-                <p  class="contact-title"> <%=tweet._source.user.description%>
+                <a href="/#/discovers/show/<%= influencer._source.id %>" target="new"  >
+                <p  class="contact-title"> <%=influencer._source.user.description%>
                 </p>
               </a>
               </div>
@@ -307,7 +260,7 @@
           <div class="actions-section">
              
               <div class="iogrow-actions pull-left">
-                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(tweet._source)"><i class="fa fa-road "></i> Mark as lead</a>
+                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(influencer._source)"><i class="fa fa-road "></i> Mark as lead</a>
               </div>
               <div class="clearfix"></div>
             </div>
@@ -323,7 +276,9 @@
         </div>
 
 
+</div>
 
+<div class="col-md-12 waterfall3" ng-hide="blankStatelead">
 
         
         <div ng-repeat="tweet in tweets" droppable  ng-show="tweetsshow" id="card_<%=$index%>"class="cardElement tweetCard" ng-drop="dropTag(lead,$index)" ng-mouseenter="showClose= true" ng-mouseleave="showClose = false" style="z-index:109;overflow: visible;">
@@ -532,7 +487,7 @@
     <div class="portlet showCard" style="padding: 15px;">
       <div class="portlet-title">
         <div class="caption">
-                <!-- class="fa fa-reorder"--><i></i>{{_("Choose languages")}}
+                <!-- class="fa fa-reorder"--><i></i>{{_("Choose languages:")}}
         </div>  
       </div>
       <div class="portlet-body">
@@ -688,6 +643,16 @@
     handleUniform();
 
     $('.waterfall').waterfall({
+        colMinWidth: 200,
+        defaultContainerWidth: 800,
+        autoresize: true
+      });
+    $('.waterfall2').waterfall({
+        colMinWidth: 200,
+        defaultContainerWidth: 800,
+        autoresize: true
+      });
+    $('.waterfall3').waterfall({
         colMinWidth: 200,
         defaultContainerWidth: 800,
         autoresize: true
