--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -676,7 +676,7 @@
           <div class="row">
             <div class="col-md-12 form-group">
 
-              <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('Add Tag')}}">
+              <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('Add a Tag')}}">
 
             </div>
           </div>
