change the url to APIs
Former-commit-id: c3dd41ce2618ace1a86ba97511fb7493b67007d9 [formerly 7118ac304b9710b550b82cef8ed931d2f71fbf03] [formerly 0639f295c7b4d965497b91b9a09038db07665b8e [formerly 1eac5ce423ebc5c56715daba998735e300d9db21]]
Former-commit-id: e414126e6b6a9962a8c48246c39f414a23f8ecbf [formerly 930e88f9accb2553b9d658e83097e01628d6d4a5]
Former-commit-id: 8bfaf4976ab8f914a8e7af4809694b476cbe94cc

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -1372,7 +1372,7 @@
                          <div class="row">
                            <div class="col-md-12 form-group">
 
-                             <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('Add a Tag')}}">
+                             <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('Add aP Tag')}}">
 
                            </div>
                          </div>
