--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -296,7 +296,7 @@ if (window.location.host != "localhost")
               <a href="/security/">Security information</a>
             </li>
             <li>
-              <a href="/_ah/api/explorer/">API&DOCS</a>
+              <a href="https://gcdc2013-iogrow.appspot.com/_ah/api/explorer">API&DOCS</a>
             </li>
           </ul>
         </div>
