linkedin search redandance
Former-commit-id: b86897efbafcff454e133db0050afbcb0665d41c [formerly d6e782b3c68059b0b1c003e653d3fca29441a750] [formerly b11ab6ba48e7ac2858e3ca442dcdf12a833340f6 [formerly 60cd4be4627fa246fec5dc81775adb6b24268dd0]]
Former-commit-id: ea16f87d01f8280493dc0de20f363250ae7f8e6d [formerly 221e9f4b4ad61daf17d66e9c38aa50557d766cd9]
Former-commit-id: 618d964ac3e30793efd195dbc3bbf48fc765d64f

--- a/templates/base.html
+++ b/templates/base.html
@@ -628,6 +628,7 @@ window.Intercom('boot', {
   <script src="/static/app/scripts/controllers/discovercontrollers.js" async></script>
    <script src="/static/app/scripts/controllers/mysettingcontrollers.js" ></script>
    <script src="/static/app/scripts/controllers/searchcontrollers.js" ></script>
+   <script src="/static/app/scripts/controllers/formsearchcontroller.js" ></script>
   <script src="/static/app/scripts/controllers/accountcontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/leadcontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/casecontrollers.js" async></script>
