working on site speed adding grunt tools to compress files , compressing js files to first_scripts, async_ascripts, sync_scripts, and ctrls_servs, and css files to sync-styles and async_styles
Former-commit-id: 68666179a6d2a1d4bd28a0a391c596e91aec209f [formerly 5b5b3e6f8bf32db035591f87d7c95c144759b765] [formerly 43c0cd138a8e82029946547eed63306e1d1bc05c [formerly e99daa274b3d42a6c9c21f83d36c1ce36e3f140a]]
Former-commit-id: 69254260404a6a37dbb34bd4e700268d70145160 [formerly 5c439d4fb0255870acab447de208c3d2de8d8d79]
Former-commit-id: 7d85e3100b28ffb66e3efa34a53a90b94996debd

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -218,7 +218,7 @@
                         <td>
                           <a href="/#/leads/show/<%= lead.id %>" class="startup-link" title="account.name">
                              <img ng-hide="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo profile-photoOnList" src="/static/img/avatar_contact.jpg" >
-                             <img  ng-show="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo profile-photoOnList" ng-src="<%=lead.profile_img_url%>">
+                             <img  ng-show="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo profile-photoOnList" src="<%=lead.profile_img_url%>">
                           </a>
                         </td>
                         <td>
@@ -361,7 +361,7 @@
                     <div class="pic">                      
                       <a href="/#/leads/show/<%= lead.id %>" class="startup-link" title="account.name">
                       <img ng-hide="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo" src="/static/img/avatar_contact.jpg" >
-                      <img  ng-show="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo" src="<%=lead.profile_img_url%>">
+                      <img  ng-show="lead.profile_img_url" alt="<%= lead.firstname %> <%= lead.lastname %>" class="img-responsive profile-photo" ng-src="<%=lead.profile_img_url%>">
                       </a>
                     </div>
                     <div class="text">
