--- a/templates/base.html
+++ b/templates/base.html
@@ -17,50 +17,21 @@
   <meta name="MobileOptimized" content="320">
 
   <!-- web fonts -->
-
-  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
-  <link href="//fonts.googleapis.com/css?family=Ubuntu:300,300italic,400,400italic,500,500italic,700,700italic&subset=latin" rel="stylesheet" type="text/css" />
-  <link href="//fonts.googleapis.com/css?family=Exo+2:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&subset=latin" rel="stylesheet" type="text/css" />
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab|Ubuntu:300,400,500,700|Exo+2:300,400,500,600,700' rel='stylesheet' type='text/css'>
   <!-- end of web fonts--> 
   <link  href="https://chrome.google.com/webstore/detail/eafcehcahfabjibkmffekmcnlnnopkni" rel="chrome-webstore-item">
-  <link href="/static/bootstrap3/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-  <!--  GLOBAL CSS Sync Files -->
-  <link href="/static/bootstrap3/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-  <link  rel="shortcut icon" href="/favicon.ico" />
-  <!-- BEGIN PAGE LEVEL PLUGIN STYLES -->
-  <link rel="stylesheet" href="/static/plugins/bootstrap-wysihtml5/wysiwyg-color.css">
-  <!-- END PAGE LEVEL PLUGIN STYLES -->
-  <!-- BEGIN THEME STYLES -->
-  <link href="static/bootstrap3/css/style-metronic.css" rel="stylesheet" type="text/css"/>
-  <link href="static/bootstrap3/css/style.css" rel="stylesheet" type="text/css"/>
-  <link href="static/bootstrap3/css/style-responsive.css" rel="stylesheet" type="text/css"/>
-  <link href="static/bootstrap3/css/plugins.css" rel="stylesheet" type="text/css"/>
-  <link href="static/bootstrap3/css/themes/light.css" rel="stylesheet" type="text/css" id="style_color"/>
-  <!-- test 
-  <link rel="stylesheet" type="text/css" href="http://cdn-na.infragistics.com/igniteui/2014.1/latest/css/themes/infragistics/infragistics.theme.css">
-  <link rel="stylesheet" type="text/css" href="http://cdn-na.infragistics.com/igniteui/2014.1/latest/css/structure/infragistics.css">-->
-  <link rel="stylesheet" href="/static/hopscotch/css/hopscotch.css"></link>
+
+  <link href="/static/build/css/sync_styles.min.css" rel="stylesheet" type="text/css"/>
   <!--  end GLOBAL CSS Sync Files -->
   
   <link href="/static/build/css/custom_css.min.css" rel="stylesheet" type="text/css"/>
+  <!--<link href="/static/plugins/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
+  <link href='/static/plugins/fullcalendar/fullcalendar.print.css' rel='stylesheet' media='print' />-->
 
-  <!-- END THEME STYLES -->
+  <!-- END OF STYLES -->
 
   <!-- **********************the stripe code******************************* -->
 
-  <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
-
-  <script type="text/javascript">
-    // This identifies your website in the createToken call below
-    // this is live mode
-     Stripe.setPublishableKey('pk_live_4Xa3cFwLO3vTgdjpjnC6gmAD'); 
-    //*************************************************************************  
-    // this is test mode 
-   // Stripe.setPublishableKey('pk_test_4Xa35zhZDqvXz1OzGRWaW4mX');
-    // ...
-  </script>
-
-   <!-- end the stripe code -->
 
 
   <script type="text/javascript">
@@ -96,7 +67,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 
 </script>
-<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/s9iirr8w';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
+<script>/*(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/s9iirr8w';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()*/</script>
 </head>
 <body class="page-header-fixed gray-body">
 
@@ -113,7 +84,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
        {% if logo != None %}
         <img src="{{logo.fileUrl}}" alt="logo" class="img-responsive" style="height:auto; width:auto; max-width:100px; max-height:32px;"/>
         {% else%}
-        <img src="http://storage.googleapis.com/iogrow-gs/iogrow-logo-app.png" alt="logo" class="img-responsive"/>
+        <img src="/static/build/img/iogrow-logo-app.png" alt="logo" class="img-responsive"/>
       
         {% endif %}
       </a>
@@ -202,7 +173,11 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                           <a href="/apps/{{ application.key.id() }}">
                           <span class="task">
                             <span class="desc">
+                               {%if application.label =="Relationships" %}
+                                <img class="platform_icons" height="50" width="50" src="/static/img/iogrow-application.png">
+                               {%else%}
                                <img class="platform_icons" height="50" width="50" src="/static/img/admin_console.png">
+                               {%endif%}
                               {{_(application.label)}}
                             </span>
                           </span>
@@ -381,7 +356,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     {{_('ioGrow Feedback lets you send ioGrow suggestions about our product. We welcome problem reports, feature ideas and general comments.')}}
     </br>
    {{_('Start by writing a brief description:')}}
-    <iframe src="https://docs.google.com/forms/d/1kj_5QgfNnsyAdIC2TOGbHImF5BiZwxKNBi7FaTbxOlE/viewform?embedded=true" width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">{{_('Loading...')}}</iframe>
+    <!--<iframe src="https://docs.google.com/forms/d/1kj_5QgfNnsyAdIC2TOGbHImF5BiZwxKNBi7FaTbxOlE/viewform?embedded=true" width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">{{_('Loading...')}}</iframe>-->
 
  </div>
 
@@ -445,31 +420,19 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
 <!-- BEGIN CORE PLUGINS -->
 
-<script src="/static/plugins/jquery.min.js"  type="text/javascript"></script>
-<script src="/static/bootstrap3/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
 
-<script src="/static/bootstrap3/plugins/moment/moment.min.js"></script>
-<script src="/static/app/scripts/vendor/angular.js" ></script>
-<script src="/static/app/scripts/vendor/socket.io/socket.io.js" ></script>
-
-<script src="/static/plugins/ng-google-chart.js" async  ></script>
-<script src="/static/plugins/d3.min.js" async ></script>
-<script src="/static/plugins/d3-funnel-charts.js"async ></script>
-    <!-- test -->
-<script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.core.js" async></script>
-<script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.dv.js" async></script>
-<script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.lob.js" async></script>
-      <!-- test -->
-
+   <!-- end the stripe code -->
+<script src="https://storage.googleapis.com/iogrow-cdn/opt_files/js/first_sync_scripts.min.js"  type="text/javascript"></script>
+<!-- async scripts-->
 <script type="text/javascript">
 
 
 
 
-var ROOT = '/_ah/api';
+//var ROOT = '/_ah/api';
 
 
-//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
@@ -553,7 +516,7 @@ var created_at = new Date("{{user.created_at}}");
 console.log('-----:)------');
 console.log('1234567890');
 console.log(created_at.getTime()/1000);
-window.Intercom('boot', {
+/*window.Intercom('boot', {
   app_id: "s9iirr8w",
   // TODO: The current logged in user's full name
   name: "{{user.google_display_name}}",
@@ -563,74 +526,83 @@ window.Intercom('boot', {
   completed_tour: '{{user.completed_tour}}',
   // TODO: The current logged in user's sign-up date as a Unix timestamp.
   created_at: created_at.getTime()/1000
-});
+});*/
  </script>
 
-<script  type="text/javascript" src="/static/build/js/sync_scripts.min.js" ></script>
-<script  type="text/javascript" src="/static/build/js/async_scripts.min.js" ></script>
-  <!--<script  type="text/javascript" src="/static/scripts.min.js" ></script>-->
+<script type="text/javascript" src="https://storage.googleapis.com/iogrow-cdn/opt_files/js/sync_scripts.min.js" ></script>
+<!--<script type="text/javascript" src="https://storage.googleapis.com/iogrow-cdn/opt_files/async_scripts.min.js" async></script>
+<script src="/static/plugins/d3.min.js" async></script>
+<script src="/static/plugins/d3-funnel-charts.js" async></script>
+<script src="/static/plugins/ng-google-chart.js" async></script>-->
+<!--<script src="https://storage.googleapis.com/iogrow-cdn/opt_files/js/async_scripts_2.min.js" ></script>-->
+<script src="/static/build/js/async_scripts_2.min.js" ></script>
+<script type="text/javascript" src="/static/build/js/sync_ctrls_sers_scripts.js"></script>
+<!--<script type="text/javascript" src="/static/build/js/async_ctrls_sers_scripts.js" ></script>-->
+
+<!--<script  type="text/javascript" src="/static/scripts.min.js" ></script>-->
+
 
  <!--<script src="http://storage.googleapis.com/iogrow-cdn/static_scripts.js" ></script>-->
- <script src="/static/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
- <script src="/static/plugins/fullcalendar/lang-all.js" type="text/javascript"></script>
- <script src="/static/plugins/fullcalendar/gcal.js" type="text/javascript"></script>
- <script src="/static/plugins/date-time-picker/jquery.simple-dtpicker.js"></script>
+  <!--<script src="/static/plugins/date-time-picker/jquery.simple-dtpicker.js"></script>
  <script type="text/javascript" src="/static/app/scripts/vendor/bootstrap-datetimepicker.min.js"></script>
   <script type="text/javascript" src="/static/plugins/caret/jquery.caret.js"></script>
  <script src="/static/bootstrap3/plugins/bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
  <script src="/static/plugins/bootstrap-switch/static/js/bootstrap-switch.js" type="text/javascript"></script>
  <script src="/static/plugins/checkboxbootstrap/js/bootstrap-checkbox.js" type="text/javascript"></script>
- <script src="/static/bootstrap3/plugins/uniform/jquery.uniform.js" type="text/javascript"></script>
-  <!-- ioGrow Services -->
+ <script src="/static/bootstrap3/plugins/uniform/jquery.uniform.js" type="text/javascript"></script>-->
+  <!-- ioGrow Services 
   <script src="/static/app/scripts/services/authservices.js"></script>
   <script src="/static/app/scripts/services/infonodeservices.js"></script>
-  <script src="/static/app/scripts/services/mapservices.js" async></script>
+  <script src="/static/app/scripts/services/mapservices.js"></script>
   <script src="/static/app/scripts/services/accountservices.js"></script>
   <script src="/static/app/scripts/services/contactservices.js"></script>
   <script src="/static/app/scripts/services/opportunityservices.js"></script>
   <script src="/static/app/scripts/services/leadservices.js" ></script>
-  <script src="/static/app/scripts/services/caseservices.js" async></script>
-  <script src="/static/app/scripts/services/discoverservices.js" async></script>
-  <script src="/static/app/scripts/services/topicservices.js" async></script>
+  <script src="/static/app/scripts/services/caseservices.js" ></script>
+  <script src="/static/app/scripts/services/discoverservices.js"></script>
+  <script src="/static/app/scripts/services/topicservices.js" ></script>
   <script src="/static/app/scripts/services/taskservices.js" ></script>
-  <script src="/static/app/scripts/services/eventservices.js" async></script>
+  <script src="/static/app/scripts/services/eventservices.js" ></script>
   <script src="/static/app/scripts/services/userservices.js"></script>
-  <script src="/static/app/scripts/services/groupservices.js" async></script>
-  <script src="/static/app/scripts/services/noteservices.js" async></script>
-  <script src="/static/app/scripts/services/commentservices.js" async></script>
+  <script src="/static/app/scripts/services/groupservices.js"></script>
+  <script src="/static/app/scripts/services/noteservices.js" ></script>
+  <script src="/static/app/scripts/services/commentservices.js" ></script>
   <script src="/static/app/scripts/services/settingservices.js" ></script>
-  <script src="/static/app/scripts/services/importservices.js" async></script>
+  <script src="/static/app/scripts/services/importservices.js" ></script>
   <script src="/static/app/scripts/services/edgeservices.js" ></script>
-  <script src="/static/app/scripts/services/reportservices.js" async></script>
+  <script src="/static/app/scripts/services/reportservices.js" ></script>
   <script src="/static/app/scripts/services/profileservices.js" ></script>
   <script src="/static/app/scripts/services/linkedinservices.js" ></script>
 
-  <!--  /End of ioGrow Services -->
+  <!--  /End of ioGrow Services 
   <script src="/static/app/scripts/app.js" ></script>
-   <!-- ioGrow helpers and directives -->
+   <!-- ioGrow helpers and directives 
   <script src="/static/app/scripts/directives/directives.js" ></script>
+  <script src="/static/app/scripts/services/helpers.js" ></script>
   <!-- /End of ioGrow helpers and directives -->
-  <!-- ioGrow Controllers -->
-  <script src="/static/app/scripts/controllers/discovercontrollers.js" async></script>
+  <!-- ioGrow Controllers 
+  <script src="/static/app/scripts/controllers/discovercontrollers.js" ></script>
    <script src="/static/app/scripts/controllers/mysettingcontrollers.js" ></script>
    <script src="/static/app/scripts/controllers/searchcontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/accountcontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/leadcontrollers.js" ></script>
-  <script src="/static/app/scripts/controllers/casecontrollers.js" async></script>
+  <script src="/static/app/scripts/controllers/casecontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/billingController.js" ></script>
   <script src="/static/app/scripts/controllers/contactcontroller.js"></script>
   <script src="/static/app/scripts/controllers/opportunitycontroller.js" ></script>
-  <script src="/static/app/scripts/controllers/documentcontrollers.js" async></script>
-  <script src="/static/app/scripts/controllers/notecontrollers.js" async></script>
+  <script src="/static/app/scripts/controllers/documentcontrollers.js"></script>
+  <script src="/static/app/scripts/controllers/notecontrollers.js"></script>
   <script src="/static/app/scripts/controllers/taskcontrollers.js"></script>
-  <script src="/static/app/scripts/controllers/eventcontrollers.js" async></script>
-  <script src="/static/app/scripts/controllers/dashboardController.js" async></script>
+  <script src="/static/app/scripts/controllers/eventcontrollers.js"></script>
+  <script src="/static/app/scripts/controllers/dashboardController.js" ></script>
 
-  <!--Admin controllers-->
+  <!--Admin controllers
   <script src="/static/app/scripts/controllers/usercontrollers.js" ></script>
-  <script src="/static/app/scripts/controllers/groupcontrollers.js" async></script>
+  <script src="/static/app/scripts/controllers/groupcontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/settingscontrollers.js" ></script>
-  <script src="/static/app/scripts/controllers/importcontrollers.js" async></script>
+  <script src="/static/app/scripts/controllers/importcontrollers.js" ></script>
+ <!-- <script src="/static/hopscotch/js/hopscotch.js" ></script>
+  <script src="/static/hopscotch/js/tour.js" ></script>-->
   <script type="text/javascript">
       var tour=document.getElementById('completedTour').value;
       console.log(tour);
@@ -664,6 +636,21 @@ window.Intercom('boot', {
   <script src="/static/plugins/respond.min.js"></script>
   <![endif]-->
 
+    <!-- test -->
+<script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.core.js" async></script>
+<script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.dv.js" async></script>
+<script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.lob.js" async></script>
+      <!-- test -->
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+<script type="text/javascript">
+    // This identifies your website in the createToken call below
+    // this is live mode
+     Stripe.setPublishableKey('pk_live_4Xa3cFwLO3vTgdjpjnC6gmAD'); 
+    //*************************************************************************  
+    // this is test mode 
+   // Stripe.setPublishableKey('pk_test_4Xa35zhZDqvXz1OzGRWaW4mX');
+    // ...
+</script>
 <script src="http://maps.google.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyDHuaxvm9WSs0nu-FrZhZcmaKzhvLiSczY&sensor=true" type="text/javascript" ></script>
 <!-- <script src="https://checkout.stripe.com/checkout.js"></script> -->
   <!-- END JAVASCRIPTS -->
