fixing bug in discovery's map
Former-commit-id: 0a378ca978b0ab4c4df6c1dfeb3918b2761f7167 [formerly c8b95c856c72feff377babc844bb21a4eedf2e65] [formerly d8a5f5f2c49538421a1b362cbd40f85f810f79d7 [formerly 18b25a00b94f95a21600f041d2eb73b0006e5c22]]
Former-commit-id: 7cde10b21c5c673ff40e56ff813fdcde1a4bf447 [formerly 90d29312836ebb373ce080ac82c97422e31d5a2c]
Former-commit-id: b81947473b02371d14339202541769c05fb70256

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -118,9 +118,9 @@
     <div class="row ">
 
 
-    <div ng-show="mapshow && map_tweets" style="height:300px; width:1200px; margin-left:5px; margin-top:0px;" id="map-canvas"/>
+    <div ng-show="mapshow" style="height:300px; width:1200px; margin-left:5px; margin-top:0px;" id="map-canvas"/>
 
-    <div ng-show=" !map_tweets && mapshow && map_tweets" class="thumbnail blank_slate_body ">
+    <div ng-show="mapshow && !map_tweets" class="thumbnail blank_slate_body ">
       <img class="col-md-2" src="http://www.brotzer-sport.ch/files/Layout/Bilder/map-icon-1106183457.png"></img>
                 <p class="lead">{{ _('Click on any Location to show related tweets.')}}</p>
               </div>
