export contacts , leads,accounts list :)
Former-commit-id: 9dc94f4dc47d781fdf61e35b848af6e4ff7b7d12 [formerly 54339716f10f5e9188e78cfd6c19a14a76ed3489] [formerly 2af26f253f18af72b54d4b89a48a57f75b6be3d9 [formerly 2c4c11435e8aab2cfbe30d5ba3e8852926f6158f]]
Former-commit-id: dc970a882dbbd5534864288d5ba9c9aa1a2609de [formerly 2c8225f7d2b965c2c7b8d1486764b31a944e30c7]
Former-commit-id: 557f1b874cb1fa67ff72c2503a28036e68111fa4

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -135,6 +135,12 @@
                            <a href="/#/contacts/new" class="btn red newBtn" style=" margin-bottom: 0px; ">
                               {{_('New Contact')}}
                            </a>
+                                <div class="btn-group">
+
+                                  <button ng-click="ExportCsvFile()" id="sample_editable_1_new" class="btn red" style="margin-left:3px;">
+                                  <i class="fa fa-download"></i>
+                                </button>
+                           </div>
                       </div>
               </div>
               
@@ -672,6 +678,33 @@
         </div>
       </div>
   </div>
+
+<!-- export data on csv file -->
+
+<div class="modal fade"  id="TakesFewMinutes"  tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+              <h3 id="myModalLabel">{{_("Export Contacts")}}</h3>
+            </div>
+            <div class="modal-body">
+             {{_("Export your contacts list on CSV file is gonna take a few minutes ")}}
+             <img src="/static/img/linkedinLoader.gif" style="width: 460px;"  ng-show="isExporting"/>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn default" data-dismiss="modal" id="close_btn">{{_("Close")}}</button>
+              <button ng-click="LoadCsvFile()"   type="submit" class="btn green btn-primary addContactNow" id="load_btn">{{_("Download")}} </button>
+            </div>
+          </div>
+          <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+      </div>
+<!-- end of modal -->
+
+
+  
              <div class="modal emailModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true" id="testnonefade">
                           <div class="modal-dialog">
                             <div class="modal-content">
